<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:background="@color/white"
        android:id="@+id/main_save_view"
        android:gravity="center"
        android:padding="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="Title : Maleficent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_margin="4dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RatingBar
            android:focusableInTouchMode="false"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="4.5"
            android:stepSize="0.5"
            android:max="5"
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/genre_maleficent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/date_maleficent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/play_time_maleficent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/make_maleficent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/age_maleficent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/info_maleficent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/view_maleficent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/short_story_maleficent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</ScrollView>